# pharmalert

./: .env.example  .gitignore  Dockerfile  README.md  broadcast_feature.py  pyproject.toml  requirements.txt  run_hidden.vbs  run_local_scraper.bat  scrape_dav_local.py
scratch/: bootstrap_gmp.py
src/: __init__.py  main.py
src/bot/: __init__.py  bot.py  router.py
src/bot/handlers/: __init__.py  admin.py  commands.py  notifications.py  subscription.py
src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  models.py
src/news/: __init__.py  base.py  ema.py  fda.py
src/scheduler/: __init__.py  jobs.py
src/scraper/: __init__.py  fetcher.py  gmp_parser.py  parser.py  pipeline.py
src/summarizer/: __init__.py  gemini.py
tests/: conftest.py  test_bot.py  test_parser.py  test_summarizer.py
